--- a/settings.html
+++ b/settings.html
@@ -33,27 +33,27 @@
 <p>!ReloadとResetはUpdateで適用されます</p>
 <p><button id="clear">Clear</button>
 Clearは即時反映です。要注意</p>
-<table border="2">
-  <tr>
+<table class="macrolist">
+  <tr class="list-t">
     <th>Macro</th> <th>Description</th>
   </tr>
   <tr>
-    <td>fanboxName</td> <td>fanboxの名前</td>
+    <td>$fanboxName$</td> <td>fanboxの名前</td>
   </tr>
   <tr>
-    <td>fanboxID</td> <td>fanboxのID</td>
+    <td>$fanboxID$</td> <td>fanboxのID</td>
   </tr>
   <tr>
-    <td>Title</td> <td>fanboxのページタイトル</td>
+    <td>$Title$</td> <td>fanboxのページタイトル</td>
   </tr>
   <tr>
-    <td>PageID</td> <td>fanboxのPageID</td>
+    <td>$PageID$</td> <td>fanboxのPageID</td>
   </tr>
   <tr>
-    <td>DiffCount</td> <td>差分合計</td>
+    <td>$DiffCount$</td> <td>差分合計</td>
   </tr>
   <tr>
-    <td>Diff</td> <td>差分</td>
+    <td>$Diff$</td> <td>差分</td>
   </tr> 
   <tr>
     <td>$AttrName$</td> <td>添付ファイルの名前</td>
