--- a/settings.html
+++ b/settings.html
@@ -58,6 +58,9 @@ Clearは即時反映です。要注意</p>
   <tr>
     <td>$AttrName$</td> <td>添付ファイルの名前</td>
   </tr> 
+  <tr>
+    <td>$YYYY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
+  </tr> 
 </table>
 </body>
 </html>
