fanbox-downloader: 初期設定の変更

--- a/settings.html
+++ b/settings.html
@@ -59,7 +59,10 @@ Clearは即時反映です。要注意</p>
     <td>$AttrName$</td> <td>添付ファイルの名前</td>
   </tr> 
   <tr>
-    <td>$YYYY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
+    <td>$YYYY$ $YY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
+  </tr> 
+  <tr>
+    <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$ $mm$</td> <td>年月日時分(28時間表記)</td>
   </tr> 
 </table>
 </body>
