--- a/settings.html
+++ b/settings.html
@@ -1,69 +1,68 @@
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="settings.css">
-<script src="settings.js" defer></script>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="settings.css">
+  <script src="settings.js" defer></script>
 </head>
 <body>
-<p class="main">ダウンロードオプション</p>
-<div class="sub">
-  <label for="attr">
-  <input type="checkbox" id="attr" name="attr">
-  添付ファイルを取得</label><br>
-  <label for="txt">
-  <input type="checkbox" id="txt" name="txt" >
-  テキストを取得</label>
-</div>
+  <p class="main">ダウンロードオプション</p>
+  <div class="sub">
+    <label for="attr">
+    <input type="checkbox" id="attr" name="attr">
+    添付ファイルを取得</label><br>
+    <label for="txt">
+    <input type="checkbox" id="txt" name="txt" >
+    テキストを取得</label>
+  </div>
 
-<br>
-<p class="main">リネームマクロ</p>
- <input type="text" id="macro" size="60">
+  <br>
+  <p class="main">リネームマクロ</p>
+  <input type="text" id="macro" size="60">
 
-<p class="main">リネームマクロ(複数枚時)</p>
-<input type="text" id="macro2" size="60">
+  <p class="main">リネームマクロ(複数枚時)</p>
+  <input type="text" id="macro2" size="60">
 
-<p class="main">リネームマクロ(添付)</p>
-<input type="text" id="macro3"  size="60">
+  <p class="main">リネームマクロ(添付)</p>
+  <input type="text" id="macro3"  size="60">
 
-
-<p><button id="save">Update!</button>
-  <button id="reload">Reload!</button>
-  <button id="reset">Reset</button>
-</p>
-<p>!ReloadとResetはUpdateで適用されます</p>
-<p><button id="clear">Clear</button>
-Clearは即時反映です。要注意</p>
-<table class="macrolist">
-  <tr class="list-t">
-    <th>Macro</th> <th>Description</th>
-  </tr>
-  <tr>
-    <td>$fanboxName$</td> <td>fanboxの名前</td>
-  </tr>
-  <tr>
-    <td>$fanboxID$</td> <td>fanboxのID</td>
-  </tr>
-  <tr>
-    <td>$Title$</td> <td>fanboxのページタイトル</td>
-  </tr>
-  <tr>
-    <td>$PageID$</td> <td>fanboxのPageID</td>
-  </tr>
-  <tr>
-    <td>$DiffCount$</td> <td>差分合計</td>
-  </tr>
-  <tr>
-    <td>$Diff$</td> <td>差分</td>
-  </tr> 
-  <tr>
-    <td>$AttrName$</td> <td>添付ファイルの名前</td>
-  </tr> 
-  <tr>
-    <td>$YYYY$ $YY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
-  </tr> 
-  <tr>
-    <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$ $mm$</td> <td>年月日時分(28時間表記)</td>
-  </tr> 
-</table>
-</body>
+  <p>
+    <button id="save">Update!</button>
+    <button id="reload">Reload!</button>
+    <button id="reset">Reset</button>
+    ReloadとResetはUpdateで適用されます<br>
+  </p>
+  <table class="macrolist">
+    <tr class="list-t">
+      <th>Macro</th> <th>Description</th>
+    </tr>
+    <tr>
+      <td>$fanboxName$</td> <td>fanboxの名前</td>
+    </tr>
+    <tr>
+      <td>$fanboxID$</td> <td>fanboxのID</td>
+    </tr>
+    <tr>
+      <td>$Title$</td> <td>fanboxのページタイトル</td>
+    </tr>
+    <tr>
+      <td>$PageID$</td> <td>fanboxのPageID</td>
+    </tr>
+    <tr>
+      <td>$DiffCount$</td> <td>差分合計</td>
+    </tr>
+    <tr>
+      <td>$Diff$</td> <td>差分</td>
+    </tr> 
+    <tr>
+      <td>$AttrName$</td> <td>添付ファイルの名前</td>
+    </tr> 
+    <tr>
+      <td>$YYYY$ $YY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
+    </tr> 
+    <tr>
+      <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$</td> <td>年月日時分(28時間表記)</td>
+    </tr> 
+  </table>
+      <a href="https://github.com/tana3n/chromium-extentions">https://github.com/tana3n/chromium-extentions/<a>
+  </body>
 </html>
