--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
 
   <p>
     <button id="save">Update!</button>
-    <button id="reload">Reload!</button>
+    <button id="reload">Reload</button>
     <button id="reset">Reset</button>
     ReloadとResetはUpdateで適用されます<br>
   </p>
@@ -63,6 +63,6 @@
       <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$</td> <td>年月日時分(28時間表記)</td>
     </tr> 
   </table>
-      <a href="https://github.com/tana3n/chromium-extentions">https://github.com/tana3n/chromium-extentions/<a>
+      <a href="https://github.com/tana3n/fanbox-downloader">https://github.com/tana3n/fanbox-downloader/<a>
   </body>
 </html>
