--- a/settings.html
+++ b/settings.html
@@ -63,6 +63,6 @@
       <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$</td> <td>年月日時分(28時間表記)</td>
     </tr> 
   </table>
-      <a href="https://github.com/tana3n/fanbox-downloader">https://github.com/tana3n/fanbox-downloader/<a>
+      <a href="https://github.com/tana3n/fanbox-downloader/blob/master/release.md">リリースログ<a>
   </body>
 </html>
