DL時の日時を取得出来るようにした

--- a/settings.html
+++ b/settings.html
@@ -57,10 +57,16 @@
       <td>$AttrName$</td> <td>添付ファイルの名前</td>
     </tr> 
     <tr>
-      <td>$YYYY$ $YY$ $MM$ $DD$ $hh$ $mm$</td> <td>年月日時分</td>
+      <td>$YYYY$ $YY$ $MM$ $DD$ $hh$ $mm$</td> <td>公開年月日時分</td>
     </tr> 
     <tr>
-      <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$</td> <td>年月日時分(28時間表記)</td>
+      <td>$YYYY28$ $YY28$ $MM28$ $DD28$ $hh28$</td> <td>公開年月日時(28時間表記)</td>
+    </tr> 
+    <tr>
+      <td>$NYYYY$ $NYY$ $NMM$ $NDD$ $Nhh$ $Nmm$</td> <td>現在年月日時分</td>
+    </tr> 
+    <tr>
+      <td>$NYYYY28$ $NYY28$ $NMM28$ $NDD28$ $Nhh28$</td> <td>現在年月日時(28時間表記)</td>
     </tr> 
   </table>
       <a href="https://github.com/tana3n/fanbox-downloader/blob/master/release.md">リリースログ<a>
